Arquitetura de computadores added

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
     - 'Tecnologias e aplicações': 'conteudos/tecnologias-aplicacoes.md'
     - 'Álgebra Booleana': 'conteudos/algebra-booleana.md'
     - 'Eletrônica Digital': 'conteudos/eletronica-digital-conceitos-basicos.md'
+    - 'Arquitetura de Computadores': 'conteudos/arquitetura-de-computadores.md'
     - 'Representação e processamento da informação': 'conteudos/representacao-processamento-da-informacao.md'
     - 'Introdução à Ciência da Computação': 'conteudos/introducao-ciencia-computacao.md'
     - 'Aritmética Binária': 'conteudos/aritmetica-binaria.md'
