hardware e software added

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
     - 'Álgebra Booleana': 'conteudos/algebra-booleana.md'
     - 'Eletrônica Digital': 'conteudos/eletronica-digital-conceitos-basicos.md'
     - 'Arquitetura de Computadores': 'conteudos/arquitetura-de-computadores.md'
+    - 'Hardware e Software': 'conteudos/hardware-software.md'
     - 'Representação e processamento da informação': 'conteudos/representacao-processamento-da-informacao.md'
     - 'Introdução à Ciência da Computação': 'conteudos/introducao-ciencia-computacao.md'
     - 'Aritmética Binária': 'conteudos/aritmetica-binaria.md'
